<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              android:background="@color/colorBackground"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.avatlantik.smartmilking.ui.widget.DateTimeView
            android:id="@+id/date_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            custom:title="@string/table_report_date_start"
            android:layout_margin="5dp"
            android:layout_weight="1">

        </com.avatlantik.smartmilking.ui.widget.DateTimeView>

        <com.avatlantik.smartmilking.ui.widget.DateTimeView
            android:id="@+id/date_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            custom:title="@string/table_report_date_end"
            android:layout_margin="5dp"
            android:layout_weight="1">

        </com.avatlantik.smartmilking.ui.widget.DateTimeView>


    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorWhite">

        <EditText
            android:id="@+id/place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/table_report_place_full"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="1"
            android:textSize="@dimen/text_size_middle"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorWhite">

        <EditText
            android:id="@+id/machine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/table_report_machine"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="@dimen/text_size_middle"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorWhite">

        <EditText
            android:id="@+id/cow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/table_report_cow"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="@dimen/text_size_middle"/>

    </android.support.design.widget.TextInputLayout>

</LinearLayout>